# reedsolomon

./: :q  README.md  RSH.cabal
app/: Main.hs
exemple/: cor.folded  enc  end2.folded
src/: Bin.hs.bak  Code.hs  Corps.hs  CorpsPremier.hs  Fichiers.hs  Parametres.hs  Poly.hs  corps.hs.bak
