name:                RSH
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/RSH#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Poly,
                       CorpsPremier,
                       Corps,
                       Code,
                       Fichiers
                       Parametres
  build-depends:       base >= 4.8 && < 5,
                       vector >= 0.11,
                       bytestring >= 0.10
  default-language:    Haskell2010

executable reedsol
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5,
                       bytestring > 0.10,
                       RSH
  default-language:    Haskell2010
